# snipai

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  ruff.toml  scripts.py
assets/: README.md
configs/: README.md
snipai/: app.py
snipai/assets/configs/: config.json
snipai/src/: constants.py
snipai/src/common/: config.py  db.py  prompt.py  resources.py  style_sheet.py  types.py  utils.py
snipai/src/model/: image.py
snipai/src/services/: __init__.py  base.py  embed.py  keyboard.py  llm.py  metadata.py  storage.py
snipai/src/ui/components/: __init__.py  graph_settings.py  image_card.py  multi_combo_box.py  network_graph.py  search_bar.py  snip.py  waterfall_layout.py
snipai/src/ui/view/: __init__.py  bookmarks_interface.py  home_interface.py  recents_interface.py  settings_interface.py  window.py
